eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Fields_for_Triggers__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_Field_Name__c</fullName>
        <label>API Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Fields for Triggers</label>
</CustomObject>